--- a/signal.html
+++ b/signal.html
@@ -116,6 +116,13 @@ body{
   align-self:start;
 }
 .selectAllBtn:hover{background:rgba(0,40,0,0.7);box-shadow:0 0 10px #0f0}
+
+/* Responsive: মোবাইলের জন্য */
+@media screen and (max-width:480px){
+  #assetBox{
+    grid-template-columns:1fr; /* এক কলামে দেখাবে */
+  }
+}
 </style>
 </head>
 <body>
