--- a/signal.html
+++ b/signal.html
@@ -7,119 +7,25 @@
 <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Share Tech Mono', monospace}
-body{
-  background:#000;
-  min-height:100vh;
-  color:#0f0;
-  overflow-x:hidden;
-  display:flex;
-  justify-content:center;
-  padding-top:20px;
-}
-#matrix{
-  position:fixed;
-  top:0;left:0;
-  width:100%;height:100%;
-  z-index:-1;
-}
-.panel{
-  width:90%;
-  max-width:900px;
-  background:rgba(0,0,0,0.6);
-  border:1px solid #0f0;
-  padding:30px 28px;
-  border-radius:12px;
-  backdrop-filter:blur(6px);
-  box-shadow:0 0 35px rgba(0,255,0,0.12);
-  display:flex;
-  flex-direction:column;
-}
-.title{
-  text-align:center;
-  font-size:24px;
-  margin-bottom:24px;
-  text-shadow:0 0 12px #0f0;
-  font-weight:bold;
-}
+body{background:#000;min-height:100vh;color:#0f0;overflow-x:hidden;display:flex;justify-content:center;padding-top:20px;}
+#matrix{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;}
+.panel{width:90%;max-width:900px;background:rgba(0,0,0,0.6);border:1px solid #0f0;padding:30px 28px;border-radius:12px;backdrop-filter:blur(6px);box-shadow:0 0 35px rgba(0,255,0,0.12);display:flex;flex-direction:column;}
+.title{text-align:center;font-size:24px;margin-bottom:24px;text-shadow:0 0 12px #0f0;font-weight:bold;}
 .row{display:flex;flex-direction:column;gap:12px;margin-bottom:16px}
 .row label{font-size:15px;color:#0f0;font-weight:600}
-.row select,.row input{
-  width:100%;
-  padding:12px;
-  background:#000;
-  border:1px solid #0f0;
-  color:#0f0;
-  border-radius:8px;
-  outline:none;
-  font-size:14px;
-}
+.row select,.row input{width:100%;padding:12px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;outline:none;font-size:14px;}
 .btns{display:flex;gap:12px;margin-top:12px;flex-wrap:wrap;justify-content:center}
-.btn{
-  flex:1;
-  min-width:150px;
-  padding:12px;
-  background:linear-gradient(90deg,#00ff0f,#00cc8a);
-  border:1px solid #0f0;
-  color:#000;
-  border-radius:8px;
-  cursor:pointer;
-  font-size:15px;
-  font-weight:bold;
-  text-shadow:0 0 6px #0f0;
-  transition:.2s;
-  box-shadow:0 0 20px rgba(0,255,0,0.5);
-}
+.btn{flex:1;min-width:150px;padding:12px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:1px solid #0f0;color:#000;border-radius:8px;cursor:pointer;font-size:15px;font-weight:bold;text-shadow:0 0 6px #0f0;transition:.2s;box-shadow:0 0 20px rgba(0,255,0,0.5);}
 .btn:hover{background:linear-gradient(90deg,#00cc8a,#00ff0f);box-shadow:0 0 24px #0f0}
-.output{
-  margin-top:20px;
-  padding:14px;
-  border:1px dashed rgba(0,255,0,0.3);
-  min-height:220px;
-  white-space:pre-line;
-  overflow-y:auto;
-  border-radius:8px;
-  font-size:14px;
-  line-height:1.4;
-}
-#assetBox{
-  display:grid;
-  grid-template-columns:repeat(2,1fr);
-  gap:8px;
-}
-#assetBox label{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:6px 8px;
-  border-radius:6px;
-  border:1px solid rgba(0,255,0,0.2);
-  transition:.2s;
-  cursor:pointer;
-}
-#assetBox label:hover{
-  background:rgba(0,255,0,0.1);
-  box-shadow:0 0 10px #0f0;
-}
-#assetBox input[type="checkbox"]{
-  accent-color:#0f0;
-}
-.selectAllBtn{
-  margin-top:6px;
-  background:rgba(0,0,0,0.6);
-  border:1px solid #0f0;
-  padding:6px 10px;
-  border-radius:6px;
-  cursor:pointer;
-  color:#0f0;
-  text-shadow:0 0 4px #0f0;
-  font-size:13px;
-  align-self:start;
-}
+.output{margin-top:20px;padding:14px;border:1px dashed rgba(0,255,0,0.3);min-height:220px;white-space:pre-line;overflow-y:auto;border-radius:8px;font-size:14px;line-height:1.4;}
+#assetBox{display:grid;grid-template-columns:repeat(2,1fr);gap:8px;}
+#assetBox label{display:flex;justify-content:space-between;align-items:center;padding:6px 8px;border-radius:6px;border:1px solid rgba(0,255,0,0.2);transition:.2s;cursor:pointer;}
+#assetBox label:hover{background:rgba(0,255,0,0.1);box-shadow:0 0 10px #0f0;}
+#assetBox input[type="checkbox"]{accent-color:#0f0;}
+.selectAllBtn{margin-top:6px;background:rgba(0,0,0,0.6);border:1px solid #0f0;padding:6px 10px;border-radius:6px;cursor:pointer;color:#0f0;text-shadow:0 0 4px #0f0;font-size:13px;align-self:start;}
 .selectAllBtn:hover{background:rgba(0,40,0,0.7);box-shadow:0 0 10px #0f0}
-@media(max-width:500px){
-  #assetBox{grid-template-columns:1fr;}
-  .btns{flex-direction:column;}
-}
+@media(max-width:500px){#assetBox{grid-template-columns:1fr;}.btns{flex-direction:column;}}
+#adminTrigger{position:fixed;bottom:5px;right:5px;width:20px;height:20px;opacity:0;cursor:pointer;}
 </style>
 </head>
 <body>
@@ -175,6 +81,8 @@ body{
   <div class="output" id="out"></div>
 </div>
 
+<div id="adminTrigger"></div>
+
 <script>
 // Matrix Effect
 const c=document.getElementById('matrix');
@@ -185,24 +93,14 @@ let drops=[];
 function resize(){c.width=window.innerWidth;c.height=window.innerHeight;cols=Math.floor(c.width/fontSize);drops=[];for(let x=0;x<cols;x++)drops[x]=1;}
 function initMatrix(){resize();setInterval(draw,40);}
 const matrixChars='アカサタナハマヤラワ0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ'.split('');
-function draw(){
-  ctx.fillStyle='rgba(0,0,0,0.05)';
-  ctx.fillRect(0,0,c.width,c.height);
-  ctx.fillStyle='#0f0';
-  ctx.font=fontSize+'px Share Tech Mono';
-  for(let i=0;i<drops.length;i++){
-      let text=matrixChars[Math.floor(Math.random()*matrixChars.length)];
-      ctx.fillText(text,i*fontSize,drops[i]*fontSize);
-      if(drops[i]*fontSize>c.height && Math.random()>0.975) drops[i]=0;
-      drops[i]++;
-  }
-}
+function draw(){ctx.fillStyle='rgba(0,0,0,0.05)';ctx.fillRect(0,0,c.width,c.height);ctx.fillStyle='#0f0';ctx.font=fontSize+'px Share Tech Mono';for(let i=0;i<drops.length;i++){let text=matrixChars[Math.floor(Math.random()*matrixChars.length)];ctx.fillText(text,i*fontSize,drops[i]*fontSize);if(drops[i]*fontSize>c.height && Math.random()>0.975) drops[i]=0; drops[i]++;}}
 window.addEventListener('resize',initMatrix);
 initMatrix();
 
 // Signal System
 const realAssets = ["EUR/USD","GBP/USD","USD/JPY","AUD/JPY","EUR/JPY","GBP/JPY","USD/CAD","AUD/CAD","EUR/GBP","USD/CHF"];
 const otcAssets = ["NZD/USD (OTC)"];
+let licenseDB=[]; // for admin created licenses
 
 function updateAssets(){
   const type=document.getElementById('marketType').value;
@@ -221,13 +119,7 @@ function updateAssets(){
 }
 updateAssets();
 
-function randomAsset(selectedAssets){
-  if(selectedAssets.length>0){
-    return selectedAssets[Math.floor(Math.random()*selectedAssets.length)];
-  }else{
-    return realAssets[Math.floor(Math.random()*realAssets.length)];
-  }
-}
+function randomAsset(selectedAssets){return selectedAssets.length>0?selectedAssets[Math.floor(Math.random()*selectedAssets.length)]:realAssets[Math.floor(Math.random()*realAssets.length)];}
 
 function generateSignals(count){
   const signalBox=document.getElementById("out");
@@ -239,7 +131,7 @@ function generateSignals(count){
   current.setHours(current.getUTCHours()+tzOffset);
   let output=`▶️ DATE: ${current.toLocaleDateString('en-GB').replace(/\//g,'.')} ◀️\n\n⏰ UTC ${tzOffset>=0?'+':'-'}${tzOffset}:00 ; MTG :- 1 STEP➕\n\n          😈 FINORIX MATRIX 😈\n\n⌛️ ${document.getElementById('tf').value} Minutes\n\n`;
   for(let i=0;i<count;i++){
-      const gap=Math.floor(Math.random()*6)+3; // 3-8 minutes
+      const gap=Math.floor(Math.random()*6)+3; // 3-8 min
       current.setMinutes(current.getMinutes()+gap);
       const t=current.toTimeString().substring(0,5);
       const asset=randomAsset(selectedAssets);
@@ -250,30 +142,13 @@ function generateSignals(count){
   typeWrite(output,signalBox);
 }
 
-function typeWrite(text,element){
-  let index=0;
-  element.textContent="";
-  function type(){
-      if(index<text.length){
-          element.textContent+=text.charAt(index);
-          index++;
-          setTimeout(type,15);
-      }
-  }
-  type();
-}
+function typeWrite(text,element){let index=0;element.textContent="";function type(){if(index<text.length){element.textContent+=text.charAt(index);index++;setTimeout(type,15);}}type();}
 
 function copyAll(){navigator.clipboard.writeText(document.getElementById('out').textContent);}
 function resetOut(){document.getElementById('out').textContent='';}
-function toggleSelectAll(){
-  const checkboxes=document.querySelectorAll('#assetBox input[type="checkbox"]');
-  const allChecked=Array.from(checkboxes).every(c=>c.checked);
-  checkboxes.forEach(c=>c.checked=!allChecked);
-}
+function toggleSelectAll(){const checkboxes=document.querySelectorAll('#assetBox input[type="checkbox"]');const allChecked=Array.from(checkboxes).every(c=>c.checked);checkboxes.forEach(c=>c.checked=!allChecked);}
 
 // --- License Popup ---
-const validLicenses = ["LIC-12345","LIC-67890"]; // তোমার valid license
-
 function showLicensePopup(){
     const overlay = document.createElement("div");
     overlay.style.position = "fixed";
@@ -299,6 +174,8 @@ function showLicensePopup(){
     box.style.textAlign = "center";
     box.style.boxShadow = "0 0 25px #0f0";
 
+    let validLicenses = licenseDB.map(l=>l.key); // admin created licenses
+
     box.innerHTML = `
         <h2>🛡 Hacking System 🛡</h2>
         <p>Enter your <b>License Key</b> below to access signals.</p>
@@ -309,14 +186,10 @@ function showLicensePopup(){
         <button id="popupSubmit" style="margin-top:12px;padding:10px 20px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:none;color:#000;font-weight:bold;border-radius:8px;cursor:pointer;">Submit</button>
         <button id="popupClose" style="margin-top:12px;padding:8px 15px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;cursor:pointer;margin-left:10px;">Close</button>
     `;
-
     overlay.appendChild(box);
     document.body.appendChild(overlay);
 
-    document.getElementById("popupClose").onclick = () => {
-        document.body.removeChild(overlay);
-    }
-
+    document.getElementById("popupClose").onclick = () => document.body.removeChild(overlay);
     document.getElementById("popupSubmit").onclick = () => {
         const license = document.getElementById("popupLicense").value.trim();
         if(validLicenses.includes(license)){
@@ -324,8 +197,58 @@ function showLicensePopup(){
             const count = parseInt(document.getElementById('count').value) || 5;
             generateSignals(count);
         } else {
-            alert("Invalid License! Please contact @traderParvej after creating account and deposit.");
+            alert("Invalid License! Contact @traderParvej after deposit.");
         }
+    }
+}
+
+// --- Admin Panel ---
+let adminClicks=0;
+document.getElementById("adminTrigger").onclick = () => {
+    adminClicks++;
+    if(adminClicks>=5){ // 5 rapid clicks
+        adminClicks=0;
+        let pwd = prompt("Enter Admin Password:");
+        if(pwd==="@TraderParvej@"){
+            showAdminPanel();
+        } else alert("Wrong Password!");
+    }
+};
+
+function showAdminPanel(){
+    const overlay = document.createElement("div");
+    overlay.style.position="fixed"; overlay.style.top="0"; overlay.style.left="0";
+    overlay.style.width="100%"; overlay.style.height="100%";
+    overlay.style.background="rgba(0,0,0,0.95)";
+    overlay.style.display="flex"; overlay.style.justifyContent="center"; overlay.style.alignItems="center";
+    overlay.style.zIndex="99999";
+
+    const box = document.createElement("div");
+    box.style.background="#000"; box.style.border="2px solid #0f0"; box.style.padding="30px";
+    box.style.borderRadius="12px"; box.style.maxWidth="400px"; box.style.width="90%";
+    box.style.color="#0f0"; box.style.fontFamily="'Share Tech Mono', monospace"; box.style.textAlign="center";
+    box.style.boxShadow="0 0 25px #0f0";
+
+    box.innerHTML = `
+        <h2>🛠 Admin Panel 🛠</h2>
+        <input type="text" id="adminQuotexID" placeholder="Enter Quotex ID" style="width:90%;padding:10px;margin:10px 0;background:#000;border:1px solid #0f0;color:#0f0;border-radius:6px;font-size:14px;"><br>
+        <input type="number" id="adminDays" placeholder="License Days" style="width:90%;padding:10px;margin:10px 0;background:#000;border:1px solid #0f0;color:#0f0;border-radius:6px;font-size:14px;"><br>
+        <button id="createLicense" style="margin-top:12px;padding:10px 20px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:none;color:#000;font-weight:bold;border-radius:8px;cursor:pointer;">Create License</button>
+        <button id="closeAdmin" style="margin-top:12px;padding:8px 15px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;cursor:pointer;margin-left:10px;">Close</button>
+    `;
+    overlay.appendChild(box);
+    document.body.appendChild(overlay);
+
+    document.getElementById("closeAdmin").onclick = ()=>document.body.removeChild(overlay);
+    document.getElementById("createLicense").onclick = ()=>{
+        const qid=document.getElementById("adminQuotexID").value.trim();
+        const days=parseInt(document.getElementById("adminDays").value);
+        if(qid && days>0){
+            const newKey="LIC-"+Math.random().toString(36).substring(2,8).toUpperCase();
+            const expireDate=new Date(); expireDate.setDate(expireDate.getDate()+days);
+            licenseDB.push({key:newKey,quotex:qid,expire:expireDate});
+            alert(`License Created!\nKey: ${newKey}\nExpires: ${expireDate.toLocaleDateString()}`);
+        } else alert("Enter valid Quotex ID and Days!");
     }
 }
 </script>
